Slugs Overflow Bug

--- a/src/app/(no-layout)/a1/[slug]/slug.module.css
+++ b/src/app/(no-layout)/a1/[slug]/slug.module.css
@@ -5,6 +5,7 @@
    align-items: center;
    justify-content: center;
    padding: 1rem;
+   overflow: hidden;
    
    .img {
       object-fit: cover;
