--- a/src/app/(no-layout)/a2/[slug]/slug.module.css
+++ b/src/app/(no-layout)/a2/[slug]/slug.module.css
@@ -5,10 +5,10 @@
    align-items: center;
    justify-content: center;
    padding: 1rem;
+   overflow: hidden;
    
    .img {
       object-fit: cover;
-      /* rotate: 180deg; */
    }
    
    & .lessonTitle {
